--- a/Siap/Catherine/Tubes htdocs/styleCurrentProgress.css
+++ b/Siap/Catherine/Tubes htdocs/styleCurrentProgress.css
@@ -2,7 +2,6 @@ body {
   margin: 0;
   background-color: #9fc5f8;
 }
-
 ul {
   list-style-type: none;
   margin: 0;
@@ -25,6 +24,7 @@ li a {
   padding-top: 30%;
 }
 
+
 .fa-user-circle-o{
   padding-top: 250%;
 }
@@ -39,7 +39,6 @@ a:hover{
   padding-bottom: 20px;
   background-color: #2b78e4;
   padding-left: 15px;
-  margin-bottom: 70px;
   
 }
 
@@ -50,18 +49,19 @@ h1{
   color: white;
 }
 
+.sebelah .fa-line-chart{
+  font-size: 40px;
+  color: white;
+}
 
-/*isi tengah dan kanan*/
+
 .main {
   float: left;
-  width: 60%;
+  width: 45%;
   height: 14cm;
   padding: 0 20px;
-  margin-left: 10%; 
-  margin-right: 3%;
-  margin-bottom: 10%;
-  background-color: #597eaa;
-  color: #f1c232;
+  margin:5% 5% 10% 13%;
+  color: #2b78e4;
 }
 
 .main .atas12{
@@ -69,77 +69,19 @@ h1{
 
 }
 
-.fa-shopping-cart{
-  padding-right: 20px;
-  font-size: 40px;
-  padding-top: 8px;
-}
-
-.main .isi2{
-  background-color: #073763;
-  color: #f1c232;
-  width: 8cm;
-  height: 30px;
-  margin-left: 30%;
-  text-align: center;
-}
-
-.main .isi{
-  width: 8cm;
-  margin-left: 30%;
-}
-
-.main .isi b{
-  font-size: 20px;
-}
-
-.main .isi p{
-  padding-left: 30px;
-}
-
 .right {
   background-color: #073763;
+  margin-top: 2%;
   float: left;
-  width: 18%;
+  width: 30%;
   color: #f1c232;
   text-align: center;
 }
 
-.isi{
-  background-color: white;
-  padding-top: 20px;
-  padding-left: 15px;
-  color: black;
+.right img{
+  width: 70%;
 }
 
-.isi hr{
-  margin-left: -15px;
-}
-
-.total{
-  font-size: 15px;
-  margin-left:-15px; 
-}
-
-.btn {
-  background-color: #ff9900;
-  border: none;
-  color: white;
-  cursor: pointer;
-  height: 40px;
-  font-size: 15px;
-}
-
-.btn1 {
-  background-color: #073763;
-  margin-top: 30px;
-  margin-left: 35px;
-  border: none;
-  color: #f1c232;
-  cursor: pointer;
-  height: 40px;
-  font-size: 15px;
-}
 
 /*popup*/
 .modal {
@@ -154,6 +96,7 @@ h1{
   overflow: auto;
   background-color: rgb(0,0,0);
   background-color: rgba(0,0,0,0.4);
+  color: black;
 }
 
 /* Modal Content */
@@ -161,5 +104,18 @@ h1{
   margin: auto;
   padding:1% 2% 1% 2%; 
   border: 1px solid #888;
-  width: 30%;
+  width: 25%;
+}
+
+.modal-content button{
+  background-color: #009e0f;
+  color: #f1c232;
+  border:none;
+  width: 20%;
+  height: 30px;
+  margin-left: 40%;
+}
+
+.modal-content h3{
+  margin-left: 20%;
 }
