--- a/Siap/Catherine/Tubes htdocs/styleMenungguVerifikasi.css
+++ b/Siap/Catherine/Tubes htdocs/styleMenungguVerifikasi.css
@@ -73,11 +73,9 @@ h1{
 
 .navbar a.active {
   background-color: rgb(0,255,255);
-  border-right:1px solid black;
+  border-left:1px solid black;
 }
 
-
-/*isi tengah dan kanan*/
 .main {
   float: left;
   width: 60%;
@@ -85,9 +83,19 @@ h1{
   padding: 0 20px;
   margin-left: 10%; 
   margin-right: 3%;
-  margin-bottom: 10%; 
+  margin-bottom: 10%;
   background-color: #597eaa;
   color: #f1c232;
+}
+
+.main .isi2{
+  background-color: #073763;
+  color: #f1c232;
+  padding-left: 10px;
+}
+
+.isi2 .tanggal{
+  padding-left: 9cm;
 }
 
 .main .atas12{
@@ -101,36 +109,6 @@ h1{
   padding-top: 8px;
 }
 
-.main .isi2{
-  background-color: #073763;
-  color: #f1c232;
-  width: 8cm;
-  height: 30px;
-  margin-left: 30%;
-  text-align: center;
-}
-
-.main .isi{
-  width: 8cm;
-  margin-left: 30%;
-}
-
-.main .isi b{
-  font-size: 20px;
-}
-
-.main .isi p{
-  padding-left: 30px;
-}
-
-.right {
-  background-color: #073763;
-  float: left;
-  width: 18%;
-  color: #f1c232;
-  text-align: center;
-}
-
 .isi{
   background-color: white;
   padding-top: 20px;
@@ -138,62 +116,24 @@ h1{
   color: black;
 }
 
-.isi hr{
-  margin-left: -15px;
+.isi img{
+  width: 80%;
+  margin-right: -550px;
 }
 
-.total{
-  font-size: 15px;
-  margin-left:-15px; 
+.keterangan{
+  padding-left: 8cm;
 }
 
-.btn1 {
-  background-color: #073763;
-  margin-top: 30px;
-  margin-left: 35px;
-  border: none;
-  color: #f1c232;
-  cursor: pointer;
-  height: 40px;
-  font-size: 15px;
+.jarak{
+  font-size: 18px;
 }
 
-input[type=text] {
-    width: 80%;
-    height: 20px;
-    padding: 10px;
+.fa-clock-o{
+  font-size: 18px;
+  color: black;
 }
 
-table button{
-  background-color: #009e0f;
-  color: white;
-  border: none;
-  margin-left: 55%;
-  margin-top: 4%;
-  border-radius: 4px;
-  width: 40%;
-  padding: 8px 8px 8px 8px;
-}
-
-/*popup*/
-.modal {
-  display: none; 
-  position: fixed; 
-  z-index: 1; 
-  padding-top: 100px;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.4);
-}
-
-/* Modal Content */
-.modal-content {
-  margin: auto;
-  padding:1% 2% 1% 2%; 
-  border: 1px solid #888;
-  width: 30%;
+.status{
+  padding-top: 30px;
 }
